fixing /contact whitespace

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -223,7 +223,7 @@ div.contact-upper {
     justify-content: center;
     padding: 10px;
     max-width: 320px;
-    /* min-height: 900px; */
+    min-height: 700px;
 }
 
 .contact-upper h6 {
